fix alignment of chapter title components

--- a/user/themes/longread/scss/custom.scss
+++ b/user/themes/longread/scss/custom.scss
@@ -417,6 +417,7 @@ form#email-capture {
       }
       .chapter-number {
         font-size: 16px;
+        margin-left: -20px;
       }
       h1 {
         color: white;
@@ -434,6 +435,7 @@ form#email-capture {
       }
       .post-reading {
         position: relative;
+        margin-left: -20px;
         right: 0px;
         font-size: 16px;
         text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25), 0px 0px 6px rgba(0, 0, 0, 0.8);
